styles.css
@font-face {
    font-family: 'SignPainter';
    src: url(/fonts/SignPainter.ttc) format("truetype");
}

@font-face {
    font-family: 'CormorantGaramond';
    src: url(/fonts/CormorantGaramond-VariableFont_wght.ttf) format("truetype");
    font-display: swap;
}   

@font-face {
    font-family: 'Allura';
    src: url(/fonts/Allura-Regular.ttf) format("truetype");
    font-display: swap;
}

:root {
    /* --purple: rgba(66,2,143,.25); */
    /* --dark-purple: rgba(26,10,46,.75); */
    --dark-purple: rgba(80, 54, 109, 1);
    /* --dark-purple: rgba(83,71,98, 1); */
    --their-purple: rgb(140,0,176);
    --yellow: rgb(254, 212, 99);
}
html, body {
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}

main, figure, #annoucement, #stats, #poem {
    position: relative;
    z-index: 1;
}

body {
    background-color: var(--their-purple);
    text-align: center;
    font-family: 'CormorantGaramond', sans-serif;
    color: white;
    margin-top: 2.5vh;
    position: relative;
}

h1 {
    font-family: 'SignPainter', cursive;
    font-size: 3em;
    margin-bottom: 0;
    display: inline;
    }

h4 {
    margin-top: 0;
}

img {
    width: 100%;
    display: block;
    -webkit-mask-image: radial-gradient(
        circle,
        black 40%,
        transparent 100%
    );

    mask-image: radial-gradient(
        circle,
        black 40%,
        transparent 100%
    );
}

figure {
    width: min(80vw, 100%);
    margin: 0 auto;
    overflow: hidden;
    position: relative;
    border-radius: 5px;
    
}

figure::after {
    content: "";
    position: absolute;
    inset: 0;
    box-shadow: inset 0 0 80px var(--their-purple);
    pointer-events: none;
}

main {
    margin: 0 auto;
}

#annoucement {
    display: flex;
    flex-direction: column;
    margin: 5vh auto;
}

#annoucement h4, #annoucement h3 {
    width: 80vw;
    margin: auto;
}

h3 {
    font-family: 'SignPainter', cursive;
    font-size: 2.25em;
    color: var(--yellow);   
}

#stats {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin: 2.5vh auto;
    text-align: center;
    gap: 3vw;
    height: 15vh;
    max-width: 80vw;
    padding: 0;
}

#stats p {
    margin: 0;
}

#stats h2 {
    margin: 0;
}

.verticalLine {
    width: 2px; 
    border: none; 
    background-color: white; 
    margin: auto 0.5em;
    height: 5vh;
}

hr {
    width: 50vw;
    margin: auto;
    border: none;
    border-top: 1px solid white;
}

#poem {
    font-size: 1.25em;
    margin: 2em auto;
}

a {
    color: inherit;
}

#tribute-message p{
    display: flex;
    flex-direction: row;
    gap: 5vw;
    justify-content: center;
}

#obituary {
    font-size: 1.25em;
    margin: auto auto 2em auto;
    width: min(80vw, 100%);
}

